# oss_template

./: .gitignore  README.rst  cookiecutter.json  tox.ini
hooks/: post_gen_project.py
{{ cookiecutter.namespace }}/{{ cookiecutter.package_name }}/: environment.yml
{{ cookiecutter.package_name }}/: .gitignore  .gitlab-ci.yml  MANIFEST.in  environment.yml  pyproject.toml  requirements.txt  setup.py
{{ cookiecutter.package_name }}/docs/: conf.py
{{ cookiecutter.package_name }}/docs/_static/css/: custom.css
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/: logging.conf
{{ cookiecutter.package_name }}/{{ cookiecutter.namespace }}/: pyproject.toml
{{ cookiecutter.package_name }}/{{ cookiecutter.namespace }}/docs/: conf.py
