[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
{%- if cookiecutter._use_compiled_extensions == 'y' %}
  "extension-helpers",
  "numpy>=1.25",
  "cython"
{% endif -%}
]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.module_name }}"
description = "{{ cookiecutter.short_description }}"
requires-python = ">={{ cookiecutter.minimum_python_version }}"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
{%- if cookiecutter.author_name and cookiecutter.author_email %}
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
{%- endif %}
dependencies = [
  {{- cookiecutter._install_requires -}}
]
dynamic = ["version"]

{% if cookiecutter._include_example_code == 'y' -%}
[project.scripts]
open_astronomy_package_template_example = "{{ cookiecutter.module_name }}.example_mod:main"

{% endif -%}
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

{% if cookiecutter.project_url -%}
[project.urls]
repository = "{{ cookiecutter.project_url }}"
{%- endif %}

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
{% if cookiecutter.enable_dynamic_dev_versions == 'y' -%}
write_to = "{{ cookiecutter.module_name }}/_version.py"
{%- else -%}
write_to = "{{ cookiecutter.module_name }}/version.py"
{%- endif %}

[tool.pytest.ini_options]
testpaths = [
  "{{ cookiecutter.module_name }}",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "{{ cookiecutter.module_name }}/_{{ cookiecutter._parent_project }}_init*",
 "{{ cookiecutter.module_name }}/conftest.py",
 "{{ cookiecutter.module_name }}/*setup_package*",
 "{{ cookiecutter.module_name }}/tests/*",
 "{{ cookiecutter.module_name }}/*/tests/*",
 "{{ cookiecutter.module_name }}/extern/*",
 "{{ cookiecutter.module_name }}/version*",
 "*/{{ cookiecutter.module_name }}/_{{ cookiecutter._parent_project }}_init*",
 "*/{{ cookiecutter.module_name }}/conftest.py",
 "*/{{ cookiecutter.module_name }}/*setup_package*",
 "*/{{ cookiecutter.module_name }}/tests/*",
 "*/{{ cookiecutter.module_name }}/*/tests/*",
 "*/{{ cookiecutter.module_name }}/extern/*",
 "*/{{ cookiecutter.module_name }}/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]


[tool.ruff]
line-length = 88
indent-width = 4

[tool.pylint.basic]
good-names = [ "i", "j", "k", "f", "x", "y", "z", "l", "ex", "Run", "_",]
no-docstring-rgx = "^test_"
max-args = 6

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-dict-literal",
    "use-list-literal",
    "useless-object-inheritance",
    "logging-fstring-interpolation",
    "invalid-name",
    "c-extension-no-member",
    ]

[tool.ruff.lint]
select = [ "E", "F", "UP", "B", "SIM", "I", "NPY201"]
ignore = [ "PLW1514",]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "E402", "F401",]
"test_*py" = [ "E402",]

[tool.cruft]
skip = ["*/__init__.py", "tests"]
